trunk/Archive2/e5/232a33731cf220/output
In file included from /usr/local/include/c++/4.8.2/bits/stl_algobase.h:64:0,
                 from /usr/local/include/c++/4.8.2/bits/stl_tree.h:61,
                 from /usr/local/include/c++/4.8.2/map:60,
                 from main.cpp:1:
/usr/local/include/c++/4.8.2/bits/stl_pair.h: In instantiation of 'constexpr std::pair<_T1, _T2>::pair(_U1&&, const _T2&) [with _U1 = int; <template-parameter-2-2> = void; _T1 = int; _T2 = A]':
main.cpp:13:27:   required from here
/usr/local/include/c++/4.8.2/bits/stl_pair.h:134:45: error: use of deleted function 'A::A(const A&)'
  : first(std::forward<_U1>(__x)), second(__y) { }
                                             ^
main.cpp:7:3: error: declared here
   A(const A&) = delete;
   ^
